Starter files for 1-butene including changes to the lesson_page and acetic acid as mentioned in an earlier email to Dr. Ensign.

--- a/template/lesson_page.css
+++ b/template/lesson_page.css
@@ -28,6 +28,10 @@ sup {
 	vertical-align: top;
 	font-size: 0.6em;
 }
+#description {
+	max-height: 275px;
+	overflow: scroll;
+}
 #name {
   width: 90%;
   font-size: 40px;
