Adding base code for the orbitals and a new version of the horizontal template.

--- a/orbitals_v1/lesson_page.css
+++ b/orbitals_v1/lesson_page.css
@@ -7,58 +7,43 @@ body {
 	background-color: darkgray;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  justify-content: center;
+  align-items: center;
+	
 }
-/* TODO: Move the buttons to under the description. Make the description a little skinnier. Test on mobile devices. 16:9  */
+footer {
+  width: 650px;
+	padding: 10px;
+	font-size: 20px;
+	text-align: center;
+}
 header {
 	display: flex;
 	text-align: center;
 	justify-content: center;
-	align-content: center;
-	width: 900px;
-	font-size: 40px;
-	font-weight: bold;
-}
-main {
-	display: flex;
-	flex-direction: row;
-	width: 900px;
-	justify-content: center;
-}
-aside {
-	width: 370px;
-	padding: 2.5px;
-	font-size: 17.5px;
-	text-align: center;
-}
-main > section {
-	align-items: center;
-	display: flex;
-	flex-direction: row;
-	justify-items: center;
-}
-button {
-	height: 65px;
-	width: 65px;
+  align-content: center;
+  width: 650px;
 }
 sup {
 	vertical-align: top;
 	font-size: 0.6em;
 }
-#buttons {
-	display: flex;
-	align-content: space-between;
-	justify-content: space-between;
-}
 #description {
-	height: 420px;
+	max-height: 275px;
 	overflow: scroll;
+}
+#name {
+  width: 90%;
+  font-size: 40px;
+	font-weight: bold;
 }
 #window {
 	/* Re-size this to match the dimensions of the info variable in jsmol html pages */
 	height: 500px;
 	width: 500px;
+}
+.consoleDiv {
+	width: 100%;
 }
 .app {
 	align-self: center;
@@ -69,28 +54,37 @@ sup {
 	padding: 6px;
 }
 
-
+.molecule {
+	align-content: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
 /* credit goes to clker.com for the arrow images */
 #nextButton {
 	background: url(../images/arrow.svg.med.png);
-	background-color: darkgray;
 	background-size: 100% 100%;
+	height: 522px;
+	width: 60px;
 }
 
 #backButton {
 	background: url(../images/arrowleft.svg.med.png);
-	background-color: darkgray;
 	background-size: 100% 100%;
+	height: 522px;
+	width: 60px;
 }
 
 #restartButton {
 	background: url(../images/restart.png);
-	background-color: darkgray;
 	background-size: 100% 100%;
+	height: 65px;
+	width: 65px;
 }
 
 #refreshButton {
 	background: url(../images/refresh.png);
-	background-color: darkgray;
 	background-size: 100% 100%;
+	height: 65px;
+	width: 65px;
 }
